refactor: replace deprecated javax.xml.bind.DatatypeConverter with modern Java 8+ alternatives
- Hex encoding: replaced DatatypeConverter.printHexBinary() with
  Apache Commons Codec Hex.encodeHexString() in DependencyManager
  and HashUtils (added commons-codec dependency to both modules)
- Base64: replaced DatatypeConverter.parseBase64Binary() with
  java.util.Base64.getDecoder().decode() in SecretServiceImpl,
  DefaultSecretService, and ProcessApiTest
- DateTime: replaced DatatypeConverter.printDateTime() with
  DateTimeUtils.toIsoString(OffsetDateTime) in ConcordTask,
  ConcordTaskParams, PayloadUtils, DateTimeUtilsTest, and
  ConcordTaskIT
- Base64 encoding: replaced DatatypeConverter.printBase64Binary()
  with Base64.getEncoder().encodeToString() in CryptoIT
- Removed all javax.xml.bind.DatatypeConverter imports

Co-Authored-By: Austin <austinmcmic@gmail.com>