@@ -30,7 +30,6 @@ import com.walmartlabs.concord.runtime.v2.sdk.SecretService;
 import com.walmartlabs.concord.sdk.Secret;
 
 import javax.inject.Inject;
-import javax.xml.bind.DatatypeConverter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Objects;
@@ -93,7 +92,7 @@ public class DefaultSecretService implements SecretService {
         byte[] input;
 
         try {
-            input = DatatypeConverter.parseBase64Binary(encryptedValue);
+            input = java.util.Base64.getDecoder().decode(encryptedValue);
         } catch (Exception e) {
             throw new IllegalArgumentException("Invalid encrypted string value, please verify that it was specified/copied correctly: " + e.getMessage());
         }
